--- a/app/src/main/res/layout/tab_gasolinera_comentarios.xml
+++ b/app/src/main/res/layout/tab_gasolinera_comentarios.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
+        android:id="@+id/coment_cont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp">
