--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
 
     <!-- BUTTONS -->
     <color name="facebookColor">#3b5998</color>
+
+    <!-- COMBUSTIBLES -->
+    <color name="magna">#00701a</color>
+    <color name="premium">#d50000</color>
+    <color name="diesel">#000000</color>
 </resources>
