--- a/app/src/main/res/layout/activity_precios.xml
+++ b/app/src/main/res/layout/activity_precios.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context="com.enstax.cesarcano.hellogas.PreciosActivity">
+    tools:context="com.enstax.cesarcano.hellogas.ui.view.precios.PreciosActivity">
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -17,7 +17,7 @@
             android:layout_weight="4"
             android:gravity="center"
             android:textColor="@color/magna"
-            android:textSize="20dp"
+            android:textSize="20dp  "
             android:textStyle="bold"
             android:text="@string/gas_regular"/>
         <EditText
@@ -47,7 +47,7 @@
             android:layout_weight="4"
             android:gravity="center"
             android:textColor="@color/premium"
-            android:textSize="20dp"
+            android:textSize="20dp  "
             android:textStyle="bold"
             android:text="@string/gas_premium"/>
         <EditText
@@ -77,7 +77,7 @@
             android:layout_weight="4"
             android:gravity="center"
             android:textColor="@color/diesel"
-            android:textSize="20dp"
+            android:textSize="20dp  "
             android:textStyle="bold"
             android:text="@string/gas_diesel"/>
         <EditText
